opa-policy-constraints/manifests/container-image-must-not-have-latest-tag_constraint-exception.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowedTags
metadata:
  name: container-image-must-not-have-latest-tag-exception
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    namespaceSelector:
      matchExpressions:
        # testing exception here
        - key: "company/exception-present"
          operator: "DoesNotExist"
          #operator: "NotIn"
          #values:
          #  - "true"
    labelSelector:
      matchExpressions:
        # testing exception here
        - key: "default-ns/disallowed-tags-exception"
          operator: "NotIn"
          values:
            - "granted"
  parameters:
    tags: ["latest"]
