opa-policy-constraints/manifests/service-block-nodeport_constraint-exception.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: block-nodeport-exception
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
    labelSelector:
      matchExpressions:
        # testing exception here
        - key: "default-ns/block-nodeport-exception"
          operator: "DoesNotExist"
    namespaceSelector:
      matchExpressions:
        # testing exception here
        - key: "company/exception-present"
          operator: "DoesNotExist"
